# remerge-mwe

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  Cargo.toml  LICENSE  README.md  REMERGE_improvement_plan.md  pyproject.toml  repomix-output.xml
.github/workflows/: release.yml  tests.yml
rust/src/: bigram_data.rs  engine.rs  interner.rs  lexeme_data.rs  lexeme_store.rs  lib.rs  py_bindings.rs  scoring.rs  tests.rs  types.rs
scripts/: __init__.py
scripts/mwe_eval/: README.md  __init__.py  download.py  match.py  metrics.py  run_eval.py
scripts/mwe_eval/configs/: default.json  sweeps.json
scripts/mwe_eval/datasets/: __init__.py  base.py  coam.py  parseme12.py  streusle.py
src/remerge/: __init__.py  _core.pyi  core.py
tests/: conftest.py  fixtures.py  parity_expected.json  test_eval_datasets.py  test_eval_download.py  test_eval_match.py  test_eval_metrics.py  test_eval_runner.py  test_performance_guard.py  test_property_based.py  test_remerge.py  test_smoke.py
tests/eval_fixtures/: coam_sample.json  parseme_sample.cupt  streusle_sample.json
tests/sample_corpus/: S1A-001.TXT  S1A-002.TXT  S1A-003.TXT  S1A-004.TXT  S1A-005.TXT  S1A-006.TXT  S1A-007.TXT  S1A-008.TXT  S1A-009.TXT  S1A-010.TXT  S1A-011.TXT  S1A-012.TXT  S1A-013.TXT  S1A-014.TXT  S1A-015.TXT  S1A-016.TXT  S1A-017.TXT  S1A-018.TXT  S1A-019.TXT  S1A-020.TXT  S1A-021.TXT  S1A-022.TXT  S1A-023.TXT  S1A-024.TXT  S1A-025.TXT  S1A-026.TXT  S1A-027.TXT  S1A-028.TXT  S1A-029.TXT  S1A-030.TXT  S1A-031.TXT  S1A-032.TXT  S1A-033.TXT  S1A-034.TXT  S1A-035.TXT  S1A-036.TXT  S1A-037.TXT  S1A-038.TXT  S1A-039.TXT  S1A-040.TXT  (+319 more)
