[package]
name = "remerge-rs"
version = "0.3.0"
edition = "2021"

[lib]
name = "_core"
path = "rust/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]
location-hashset = []

[dependencies]
pyo3 = { version = "0.23.5", features = ["abi3-py312"] }
rayon = "1.10"
rustc-hash = "2"
sentencex = "0.1.13"
smallvec = "1.13"
