[project]
name = "remerge-mwe"
version = "0.2.1"
description = "REMERGE is a Multi-Word Expression (MWE) discovery algorithm derived from the MERGE algorithm."
authors = [{name = "Peter Baumgartner", email = "5107405+pmbaumgartner@users.noreply.github.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.64.1,<5",
    "numpy>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3,<8",
    "ipython>=8.5.0,<9",
    "ruff>=0.9,<1",
    "ty>=0.0.1a16",
    "py-spy>=0.3.14,<0.4",
    "pytest-sugar>=0.9.5,<0.10",
    "pytest-cov>=4.0.0,<5",
]

[tool.maturin]
python-source = "src"
module-name = "remerge._core"
features = ["python-extension"]
profile = "release"
editable-profile = "dev"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
markers = [
    "fast: quick, small-corpus tests for local iteration",
    "corpus: tests that exercise the bundled sample corpus",
    "parity: full-corpus regression parity checks (slow)",
]
