[project]
name = "remerge-mwe"
version = "0.4.1"
description = "REMERGE is a Multi-Word Expression (MWE) discovery algorithm derived from the MERGE algorithm."
authors = [{name = "Peter Baumgartner", email = "5107405+pmbaumgartner@users.noreply.github.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.1.3",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.9,<1",
    "ty>=0.0.1a16",
    "py-spy>=0.3.14",
    "pytest-sugar>=0.9.5",
    "pytest-cov>=4.0.0",
    "hypothesis>=6",
]
eval = [
    "datasets>=2.19.0",
    "conllu>=4.5.3",
    "tqdm>=4.66.0",
]

[tool.maturin]
python-source = "src"
module-name = "remerge._core"
features = ["python-extension"]
profile = "release"
editable-profile = "dev"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
markers = [
    "fast: quick, small-corpus tests for local iteration",
    "corpus: tests that exercise the bundled sample corpus",
    "parity: full-corpus regression parity checks (slow)",
]
